# shell360

./: .opencode.json  .taurignore  AGENTS.md  Cargo.toml  README-zh_cn.md  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sync-server-data.json
.github/: copilot-instructions.md
.github/workflows/: release.yaml
desktop/: index.html  package.json  rsbuild.config.ts  tsconfig.json
desktop/src/: App.tsx  README.md  env.d.ts  index.tsx  types.ts  vite-env.d.ts
desktop/src/App/: index.tsx
desktop/src/app/: index.tsx
desktop/src/atom/: authAtom.ts  colorsAtom.ts  openedForwarding.ts  syncAtom.ts  themeAtom.ts  updateAtom.ts
desktop/src/atoms/: auth.atom.ts  crypto.atom.ts  fileTransfersAtom.ts  localTerminalSettings.atom.ts  modals.atom.ts  terminalView.atom.ts  update.atom.ts  update.ts
desktop/src/config/: pages.ts
desktop/src/constants/: titleBar.ts
desktop/src/hooks/: useActivateTerminal.ts  useConfirmDelete.tsx  useExportData.ts  useImportData.ts  useListView.ts  useLocalShell.ts  useMessage.tsx  useModal.tsx
desktop/src/mui/: colors.ts  index.tsx
desktop/src/routes/: Terminal.module.less  Terminal.tsx  index.tsx  panel.module.less
desktop/src/styles/: App.module.less  index.css  index.less  panel.module.less  vars.css
desktop/src/utils/: clipboard.ts  list.ts  openUrl.ts  titleBar.ts
docs/: CONTRIBUTE.md  Sync-API-zh_cn.md  Sync-API.md
mobile/: index.html  package.json  rsbuild.config.ts  tsconfig.json
mobile/src/: App.tsx  env.d.ts  index.tsx
mobile/src/app/: index.tsx
mobile/src/atom/: iap.ts  openedForwarding.ts  themeAtom.ts
mobile/src/atoms/: globalState.atom.ts  iap.atom.ts  terminalView.atom.ts  theme.atom.ts
mobile/src/hooks/: useExportData.ts  useMessage.tsx  useModal.tsx
mobile/src/routes/: index.tsx
mobile/src/styles/: App.module.less  index.css  index.less
mobile/src/utils/: overlay.ts
scripts/: android.ps1  android.sh  install_linux_deps.sh  ios.sh  linux.sh  macos.sh  update.js  updateCargoDependencies.js  updateDependencies.js  updatePackageDependencies.js
shared/: package.json  rslib.config.ts  rstest.config.ts  tsconfig.json
shared/src/: env.d.ts  index.ts
shared/src/atoms/: appearance.atom.ts  appearanceAtom.ts  portForwardings.atom.ts  portForwardingsAtom.ts  session.atom.ts  terminalsAtom.ts  transfer.atom.ts
shared/src/hooks/: useConnection.ts  useHosts.ts  useImportAppData.ts  useKeys.ts  useKnownHostsStore.ts  usePortForwardings.ts  useRemoteSync.ts  useRemoteSyncHistory.ts  useRemoteSyncOperations.ts  useRemoteSyncState.ts  useSSH.ts  useSWR.ts  useSession.ts  useSftp.ts  useSftpConnection.ts  useSftpFileEditor.ts  useShell.ts  useSync.ts  useSyncStatus.ts  useTerminal.ts  useVirtualKeyboard.ts
shared/src/utils/: display.ts  env.ts  form.ts  host.ts  knownHosts.ts  osc.ts  (+9 more)
src-tauri/: .editorconfig  Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json  tauri.webview.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: desktop.json  mobile.json
src-tauri/src/: command.rs  error.rs  lib.rs  main.rs
sync-server/: Cargo.toml
sync-server/src/: entities.rs  main.rs  migration.rs  storage.rs  tests.rs  types.rs
sync-server/src/api/: auth.rs  core.rs  devices.rs  mod.rs  snapshots.rs
sync-server/src/entities/: access_tokens.rs  accounts.rs  devices.rs  idempotency_records.rs  mod.rs  refresh_tokens.rs  restore_records.rs  snapshot_heads.rs  snapshots.rs
sync-server/src/migration/: m20260301_000001_create_table.rs  mod.rs
tauri-plugin-data/: Cargo.toml  build.rs  package.json
tauri-plugin-data/guest-js/: host.ts
tauri-plugin-data/permissions/schemas/: schema.json
tauri-plugin-data/src/: crypto_manager.rs  data_manager.rs  error.rs  lib.rs  sync_manager.rs  sync_secret_manager.rs  utils.rs
tauri-plugin-data/src/commands/: crypto.rs  host.rs  key.rs  mod.rs  port_forwarding.rs  sync.rs
tauri-plugin-data/src/entities/: hosts.rs  keys.rs  mod.rs  port_forwardings.rs  sync_meta.rs
tauri-plugin-data/src/migration/: m20250601_000001_create_table.rs  m20250603_000001_add_proxy_jump_chain.rs  m20250604_000001_add_startup_command.rs  m20251024_000001_add_proxy_jump.rs  m20251027_000001_alter_table.rs  m20251028_000001_alter_table.rs  m20260101_000001_add_uuid.rs  mod.rs
tauri-plugin-data/ts/: crypto.ts  host.ts  index.ts  key.ts  portForwarding.ts  sync.ts
tauri-plugin-mobile/: Cargo.toml  build.rs  package.json
tauri-plugin-mobile/ios/: Package.swift
tauri-plugin-mobile/permissions/schemas/: schema.json
tauri-plugin-mobile/src/: api.rs  error.rs  lib.rs
tauri-plugin-mobile/src/iap/: iap_customer_info.rs  iap_offering.rs
tauri-plugin-mobile/ts/: index.ts
tauri-plugin-pty/: Cargo.toml  build.rs  package.json  rslib.config.ts
tauri-plugin-pty/permissions/: default.toml
tauri-plugin-pty/permissions/autogenerated/: reference.md
tauri-plugin-pty/permissions/schemas/: schema.json
tauri-plugin-pty/src/: error.rs  lib.rs  pty_manager.rs
tauri-plugin-pty/src/commands/: shell.rs
tauri-plugin-pty/src/utils/: mod.rs
tauri-plugin-pty/src/utils/platform/: macos.rs  mod.rs  unix.rs  windows.rs
tauri-plugin-pty/ts/: shell.ts
tauri-plugin-ssh/: Cargo.toml  build.rs  package.json
tauri-plugin-ssh/guest-js/: portForwarding.ts  session.ts  ssh.ts
tauri-plugin-ssh/permissions/: default.toml
tauri-plugin-ssh/permissions/autogenerated/: reference.md
tauri-plugin-ssh/permissions/autogenerated/commands/: sftp_cancel_task.toml  sftp_cancel_transfer.toml  sftp_pause_task.toml  sftp_read_text_file.toml  sftp_resume_task.toml  sftp_write_text_file.toml
tauri-plugin-ssh/permissions/schemas/: schema.json
tauri-plugin-ssh/src/: error.rs  lib.rs  ssh_client.rs  ssh_manager.rs  utils.rs
tauri-plugin-ssh/src/commands/: port_forwarding.rs  session.rs  sftp.rs  shell.rs
tauri-plugin-ssh/src/sftp/: commands.rs  sftp_client.rs  sftp_manager.rs
tauri-plugin-ssh/src/ssh/: commands.rs  socks.rs  ssh_client.rs  ssh_manager.rs
tauri-plugin-ssh/ts/: index.ts  portForwarding.ts  session.ts  sftp.ts  shell.ts
(+405 files in other folders)
