[workspace]
members = [ "src-tauri", "sync-server", "tauri-plugin-mobile", "tauri-plugin-ssh", "tauri-plugin-data" ]
resolver = "2"

[workspace.dependencies]
log = "0.4.29"
tauri = "2.10.3"
tauri-build = "2.5.6"
tauri-plugin = "2.5.4"
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-machine-uid = "0.1.3"
tauri-plugin-store = "2.4.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-log = "2.8.0"

[workspace.dependencies.tauri-plugin-dialog]
version = "2.4.2"
git = "https://github.com/nashaofu/plugins-workspace.git"
branch = "v2"

[workspace.dependencies.tauri-plugin-fs]
version = "2.4.4"
git = "https://github.com/nashaofu/plugins-workspace.git"
branch = "v2"

