[workspace]
members = [
  "src-tauri",
  "tauri-plugin-mobile",
  "tauri-plugin-ssh",
  "tauri-plugin-data",
  "tauri-plugin-pty",
]
resolver = "2"

[workspace.dependencies]
log = "0.4.32"
tauri = "2.11.2"
tauri-build = "2.6.2"
tauri-plugin = "2.6.2"
serde = "1.0.228"
serde_json = "1.0.150"
thiserror = "2.0.18"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-machine-uid = "0.1.3"
tauri-plugin-store = "2.4.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-log = "2.8.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
