[package]
name = "shell360"
version = "0.0.0"
description = "A cross-platform SSH and SFTP client."
authors = [ "nashaofu" ]
edition = "2021"

[lib]
name = "shell360_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies.tauri-build]
workspace = true
features = []

[dependencies]
rand = "~0.8"
webbrowser = "1.2.0"

[dependencies.tauri]
workspace = true
features = []

[dependencies.tauri-plugin-store]
workspace = true

[dependencies.tauri-plugin-process]
workspace = true

[dependencies.tauri-plugin-dialog]
workspace = true

[dependencies.tauri-plugin-fs]
workspace = true

[dependencies.tauri-plugin-log]
workspace = true

[dependencies.tauri-plugin-machine-uid]
workspace = true

[dependencies.tauri-plugin-clipboard-manager]
workspace = true

[dependencies.tauri-plugin-ssh]
path = "../tauri-plugin-ssh"

[dependencies.tauri-plugin-data]
path = "../tauri-plugin-data"

[dependencies.serde]
workspace = true
features = [ "derive" ]

[dependencies.serde_json]
workspace = true

[dependencies.log]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.ssh-key]
version = "0.6.7"
features = [ "ed25519", "rsa", "encryption", "p256", "p384", "p521" ]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies.tauri-plugin-updater]
version = "2.9.0"
default-features = false
features = [ "native-tls-vendored" ]

[target."cfg(any(target_os = \"ios\", target_os=\"android\"))".dependencies.tauri-plugin-mobile]
path = "../tauri-plugin-mobile"

