[package]
name = "tauri-plugin-pty"
version = "0.0.0"
edition = "2024"
exclude = ["/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-pty"

[dependencies]
tauri = { workspace = true, features = [] }
log.workspace = true
serde.workspace = true
thiserror.workspace = true
serde_json.workspace = true
portable-pty = "0.9.0"
tokio = { version = "1.52.3", features = ["full"] }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
